adds india gradient page in web

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <a href="deep_ocean.html" class="link">
             <li class="navigation" id="deep-ocean">DEEP OCEAN</li>
           </a>
-          <a href="" class="link">
-            <li class="navigation">page</li>
+          <a href="india.html" class="link">
+            <li class="navigation" id="india">INDIA</li>
           </a>
           <a href="" class="link">
             <li class="navigation">page</li>
@@ -48,7 +48,8 @@
     </nav>
   </div>
   <div class="grad-frame">
-    <div class="grad-container"></div>
+    <div class="grad-container">
+    </div>
   </div>
 </body>
 
