adds dotted gradient

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <a href="india.html" class="link">
             <li class="navigation" id="india">INDIA</li>
           </a>
-          <a href="" class="link">
-            <li class="navigation">page</li>
+          <a href="dotted.html" class="link">
+            <li class="navigation" id="dotted">DOTTED</li>
           </a>
           <a href="" class="link">
             <li class="navigation">page</li>
@@ -52,5 +52,7 @@
     </div>
   </div>
 </body>
+
+</html>
 
 </html>
