--- a/deep_ocean.html
+++ b/deep_ocean.html
@@ -23,8 +23,8 @@
           <a href="india.html" class="link">
             <li class="navigation" id="india">INDIA</li>
           </a>
-          <a href="" class="link">
-            <li class="navigation">page</li>
+          <a href="dotted.html" class="link">
+            <li class="navigation" id="dotted">DOTTED</li>
           </a>
           <a href="" class="link">
             <li class="navigation">page</li>
@@ -53,5 +53,7 @@
     </div>
   </div>
 </body>
+
+</html>
 
 </html>
