--- a/dotted.html
+++ b/dotted.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>INDIA</title>
+  <title>DOTTED</title>
   <link rel="stylesheet" href="grad_style.css">
-  <link rel="stylesheet" href="india.css">
+  <link rel="stylesheet" href="dotted.css">
 </head>
 
 <body>
