writes script to generate gradient pages (automation)

--- a/sun.html
+++ b/sun.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  <title>DEEP OCEAN</title>
+  <title>SUN</title>
   <style>
     .grad-container {
-        background-image: linear-gradient(blue, black);
+        background-image: linear-gradient(red, orange);
     }
   </style>
   <link rel="stylesheet" href="grad_style.css">
