--- a/green.html
+++ b/green.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  <title>DEEP OCEAN</title>
+  <title>GREEN</title>
   <style>
     .grad-container {
-        background-image: linear-gradient(blue, black);
+        background-image: linear-gradient(green, white);
     }
   </style>
   <link rel="stylesheet" href="grad_style.css">
